quizz flash, mypc and art gallery

--- a/src/pages/quizz/quizz.ejs
+++ b/src/pages/quizz/quizz.ejs
@@ -41,15 +41,23 @@
   </app-pc-window>
 
   <app-pc-window id="crack" randomPlace>
-    <img slot="icon" src="assets/images/icons/warning.png">
+    <img slot="icon" src="assets/images/icons/warning.png"/>
     <p slot="title">WARNING!</p>
     <iframe id="youtube-crack" width="742" height="408" src="" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"></iframe>
   </app-pc-window>
 
   <app-pc-window id="netscape-planet" randomPlace>
     <p slot="title">Netscapefinalv2</p>
-    <img slot="icon" src="assets/images/icons/warning.png">
+    <img slot="icon" src="assets/images/icons/warning.png"/>
     <object id="planet" type="text/html" data="http://ra.revolvermaps.com/w/8/a/a2.php?i=0settggap27&m=0c&c=ffffff&cr1=ffffff&f=arial&l=33&bv=10&cw=ff00ff&cb=00fff6" style="width:200px; height:200px"></object>
+  </app-pc-window>
+
+  <app-pc-window id="mona-lisa" randomPlace>
+    <img slot="icon" src="assets/images/icons/monalisa.jpeg">
+    <p slot="title">This is art</p>
+    <img src="assets/images/barbara.png" alt="">
+    <img src="assets/images/thomas.jpg" alt="">
+    <img src="assets/images/margaux.png" alt="">
   </app-pc-window>
 </div>
 
@@ -70,13 +78,17 @@
     <img src="assets/images/icons/my-computer.gif" alt="">
     <span>My Computer</span>
   </div>
-  <div class="desktop-icon" id="recycle">
-    <img src="assets/images/icons/recycle-bin.png" alt="">
-    <span>Recycle Bin</span>
+  <div class="desktop-icon" id="flash-player">
+    <img src="assets/images/icons/flash-player.png" alt="">
+    <span>Install Flash Player</span>
   </div>
   <div class="desktop-icon" id="flight-simulator">
     <img src="assets/images/icons/flight-simulator.png" alt="">
     <span>Flight Simulator 95 crack.exe</span>
+  </div>
+  <div class="desktop-icon" id="art-gallery">
+    <img src="assets/images/icons/monalisa.jpeg" alt="">
+    <span>Art Gallery</span>
   </div>
   <div id="task-bar">
     <div id="start-button"><img src="assets/images/icons/w95-icon.png">Start</div>
@@ -85,6 +97,7 @@
   <div id="virtual-girl">
     <img src="assets/images/virtual-girl.gif" alt="">
   </div>
+  <img id="flash" src="assets/images/flash.png" alt="">
 </div>
 
 <script src="https://www.youtube.com/iframe_api"></script>
