--- a/src/pages/hacked/hacked.scss
+++ b/src/pages/hacked/hacked.scss
@@ -3,20 +3,22 @@
 
 #prank {
   background-color: black;
+
   iframe {
     width: 100vw;
     display: none;
     height: 100vh;
     border: none;
   }
-
   z-index: 100;
   // display: none;
   border: none;
   cursor: none;
 }
 
-#background-wrapper, #foreground-wrapper, #prank {
+#background-wrapper,
+#foreground-wrapper,
+#prank {
   position: absolute;
   top: 0;
   bottom: 0;
@@ -27,7 +29,6 @@
 }
 
 #foreground-wrapper {
-
   #jackie-quote {
     color: white;
     position: absolute;
@@ -41,6 +42,7 @@
       font-size: 2em;
       text-shadow: 0 0 5px #0000004d;
     }
+
     #author {
       display: block;
       font-family: Arial, Helvetica, sans-serif;
@@ -55,7 +57,7 @@
     left: -64px;
 
     img {
-      width:50vw;
+      width: 50vw;
     }
   }
 
@@ -77,7 +79,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
-    background-image: url(/assets/images/coffee-cup.png);
+    background-image: url("/assets/images/coffee-cup.png");
     background-size: cover;
     z-index: 4;
 
@@ -91,11 +93,10 @@
       transform: translate(-50%,-50%);
       border-radius: 50%;
       overflow: hidden;
-      background-image: url(/assets/images/coffee-glitch.gif);
+      background-image: url("/assets/images/coffee-glitch.gif");
       background-size: 109%;
       background-position: center;
-
-z-index: -1;
+      z-index: -1;
     }
   }
 
@@ -105,7 +106,7 @@ z-index: -1;
     left: 57%;
 
     #iphone {
-      background-image: url(/assets/images/iphone.png);
+      background-image: url("/assets/images/iphone.png");
       background-repeat: no-repeat;
       background-size: contain;
       position: relative;
@@ -115,35 +116,32 @@ z-index: -1;
 
       iframe {
         position: absolute;
-        width: 26vw;
+        width: 27vw;
         left: 10%;
-        top: 8%;
+        top: 9%;
         height: 14.8vw;
-
       }
     }
-
   }
 }
 
 #background-wrapper {
-
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr;
   place-items: stretch;
 
-
   #blue {
     background-color: aqua;
   }
-  #pink{
+
+  #pink {
     background-color: pink;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.568);
   }
+
   .background-color {
-    background-image: url(/assets/images/backgrounds/grit.png);
+    background-image: url("/assets/images/backgrounds/grit.png");
     background-blend-mode: soft-light;
   }
-
 }
