--- a/src/pages/quizz/quizz.ejs
+++ b/src/pages/quizz/quizz.ejs
@@ -74,7 +74,7 @@
   <app-pc-window id="netscape-browser" randomPlace>
     <img slot="icon" src="assets/images/icons/netscape-logo.png">
     <p slot="title">Netscape Internet Browser</p>
-    <iframe id="youtube-crack" src="https://mrdoob.com/projects/google/chrome/collapse/"width="500" height="400"></iframe>
+    <iframe id="youtube-crack" src="http://www.newsoffuture.com/"width="700" height="400"></iframe>
   </app-pc-window>
 </div>
 
@@ -85,7 +85,7 @@
   </div>
   <div class="desktop-icon" id="netscape">
     <img src="assets/images/icons/netscape-logo.png" alt="">
-    <span>Netscapefinalv2.prod.Final.c</span>
+    <span>Netscape Browser.c</span>
   </div>
   <div class="desktop-icon" id="wallpaper">
     <img src="assets/images/icons/wallpaper.jpg" alt="">
