--- a/src/pages/enroll/enroll.ejs
+++ b/src/pages/enroll/enroll.ejs
@@ -14,27 +14,28 @@
 </div>
 
 <app-pc-window hidden id="window-firstname" randomPlace>
-    <p slot="title">HAHAHA</p>
+    <p slot="title">Hey, what's you little name?</p>
     <img slot="icon" src="<%= htmlWebpackPlugin.options.assetsUrl %>images/hollande.jpg">
     <p>Enter your name: </p>
     <input type="text" id="form-firstname" maxlength="10">
 </app-pc-window>
 
 <app-pc-window hidden id="window-lastname" randomPlace>
-    <p slot="title">HAHAHA</p>
+    <p slot="title">We want to know more about you</p>
     <img slot="icon" src="<%= htmlWebpackPlugin.options.assetsUrl %>images/hollande.jpg">
     <p>Lastname, now. </p>
     <input type="text" id="form-lastname" maxlength="10">
 </app-pc-window>
 
 <app-pc-window hidden id="window-birthdate" randomPlace>
-    <p slot="title">HAHAHA</p>
+    <p slot="title">How old are you?</p>
     <img slot="icon" src="<%= htmlWebpackPlugin.options.assetsUrl %>images/hollande.jpg">
     <p>Are you over 18 ?</p>
     <input type="date" id="form-birthdate" maxlength="10">
 </app-pc-window>
 
 <app-pc-window hidden id="window-signature" randomPlace>
+    <p slot="title">Please sign here</p>
     <p>Enter your signature:</p>
 </app-pc-window>
 
