--- a/src/pages/quizz/quizz.scss
+++ b/src/pages/quizz/quizz.scss
@@ -48,7 +48,7 @@
         .box {
           width: 9px;
           height: 100%;
-          background: linear-gradient(to bottom, #b828c7 0%,#5979ef 17%,#f086f3 32%,#869ef3 45%,#5979ef 59%,#00fffe 100%);
+          background: linear-gradient(to bottom, #b828c7 0%, #5979ef 17%, #f086f3 32%, #869ef3 45%, #5979ef 59%, #00fffe 100%);
           display: inline-block;
           margin-right: 2px;
           animation: loader 2s infinite;
@@ -64,6 +64,7 @@
           width: 100%;
         }
       }
+
       @keyframes loader {
         0% {
           transform: translate(-30px);
@@ -85,15 +86,14 @@
     position: absolute;
     z-index: 999;
     width: 70vw;
-    //transform: translateX(-7px);
   }
 
   #crack {
     display: none;
 
     #youtube-crack {
-      width: 100%;
-      height: 100%;
+      width: 742px;
+      height: 408px;
     }
   }
 
@@ -109,8 +109,6 @@
 
   #netscape-browser {
     display: none;
-
-    iframe {}
   }
 
   #mona-lisa {
@@ -124,6 +122,7 @@
   .window-buttons {
     display: inline-grid;
     grid-auto-flow: column;
+    justify-content: space-around;
 
     button {
       background-position-x: 0;
@@ -131,8 +130,8 @@
       background-repeat: repeat;
       background-size: auto auto;
       background-size: cover;
-      height: 150px;
       width: 110px;
+      padding: 5px;
       background-position: center center;
       border: 3px solid;
       border-bottom-color: #a8a9a8;
@@ -145,8 +144,6 @@
       margin: 5px;
     }
   }
-
-  #q-test1 button:not(.control) {}
 
   #b-abu {
     background: url("/assets/images/answers/abu.jpeg");
@@ -312,6 +309,7 @@
     }
   }
 }
+
 @-webkit-keyframes fade-out {
   0% {
     opacity: 1;
@@ -321,6 +319,7 @@
     opacity: 0;
   }
 }
+
 @keyframes fade-out {
   0% {
     opacity: 1;
@@ -330,6 +329,7 @@
     opacity: 0;
   }
 }
+
 @keyframes slide-in-elliptic-bottom-fwd {
   0% {
     -webkit-transform: translateY(600px) rotateX(30deg) scale(0);
