--- a/src/shared/custom-elements/pc-window/pc-window.ejs
+++ b/src/shared/custom-elements/pc-window/pc-window.ejs
@@ -4,11 +4,9 @@
         <slot name="title" class="text"><p>Change me by adding slot="title" to a tag</p></slot>
     </div>
     <div class="controls">
-        <% if (pcWindowOptions.controls.full) { %><button class="control">0</button><% } %>
-        <% if (pcWindowOptions.controls.help) { %><button class="control">?</button><% } %>
-        <button class="control">
-            <img src="<%= assetsUrl %>/images/icons/close.png">
-        </button>
+        <% if (pcWindowOptions.controls.full) { %><button class="control">U</button><% } %>
+        <% if (pcWindowOptions.controls.help) { %><button class="control" rover>?</button><% } %>
+        <button class="control" close>X</button>
     </div>
 </div>
 
