lien page quizz

--- a/src/core/scss/_constants.scss
+++ b/src/core/scss/_constants.scss
@@ -1,7 +1,7 @@
 /* Global constants */
 
 $color-primary: blue;
-$default-w95-bg: #007C7D;
+$default-w95-bg: #008fad;
 $default-w95-window-bg: #BABABA;
 $border: outset 2px;
 
