application jouable de bout en bout

--- a/src/pages/enroll/elements/agent-card/agent-card.ejs
+++ b/src/pages/enroll/elements/agent-card/agent-card.ejs
@@ -4,7 +4,7 @@
     </div>
     <img id="agent-icon" src="<%= assetsUrl %>images/icons/secret-agent.png" alt="">
     <div id="agent-picture">
-        <img id="agent-picture-img" src="<%= assetsUrl %>images/blob.jpeg">
+        <img id="agent-picture-img" src="<%= assetsUrl %>images/statue1.png">
     </div>
     <div id="infos">
         <p id="card-title">Secret agent card</p>
