--- a/src/core/parts/header.ejs
+++ b/src/core/parts/header.ejs
@@ -3,7 +3,8 @@
   <head>
     <title><%= title %></title>
     <meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/png" href="/assets/images/icons/coffee.png"/>
   </head>
 
   <body>
