subscribe and animals enroll

--- a/src/pages/enroll/elements/agent-card/agent-card.ejs
+++ b/src/pages/enroll/elements/agent-card/agent-card.ejs
@@ -12,6 +12,7 @@
         <h3 class="label-badge" id="firstname">Firstname: <span id="badge-fname"></span></h3>
         <h3 class="label-badge" id="lastname" hidden>Lastname: <span id="badge-lname"></span></h3>
         <h3 class="label-badge" id="birthdate" hidden>Birth date: <span id="badge-bdate"></span></h3>
+        <h3 class="label-badge" id="animal" hidden>Favourite animal: <span id="badge-animal"></span></h3>
     </div>
 </div>
 <div id="agent-card-bottom">
