--- a/src/pages/hacked/hacked.ejs
+++ b/src/pages/hacked/hacked.ejs
@@ -27,7 +27,7 @@
     </div>
     <div id="iphone-container">
         <div id="iphone">
-            <iframe width="556" height="408" src="https://www.youtube.com/embed/LmhIizQQol0?controls=0&loop=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="556" height="408" id="wikins-video" src="" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </div>
 
