--- a/src/shared/custom-elements/pc-window/pc-window.ejs
+++ b/src/shared/custom-elements/pc-window/pc-window.ejs
@@ -5,7 +5,7 @@
     </div>
     <div class="controls">
         <% if (pcWindowOptions.controls.full) { %><button class="control">U</button><% } %>
-        <% if (pcWindowOptions.controls.help) { %><button class="control" rover>?</button><% } %>
+        <% if (pcWindowOptions.controls.help) { %><button class="control" bonzi>?</button><% } %>
         <button class="control" close>X</button>
     </div>
 </div>
