--- a/src/pages/quizz/quizz.ejs
+++ b/src/pages/quizz/quizz.ejs
@@ -16,7 +16,7 @@
   <img id="cursor" src="<%= htmlWebpackPlugin.options.assetsUrl %>images/hand.png" alt="">
 
   <!-- Questions -->
-  <app-pc-window id="w-intro" ifRight="w-q1" ifWrong="w-rover">
+  <app-pc-window id="w-intro" ifRight="w-q1" ifWrong="w-bonzi">
     <img slot="icon" src="<%= htmlWebpackPlugin.options.assetsUrl %>images/icons/matrix.ico">
     <p slot="title">Well done neo.</p>
     <p>Something is going on with the <strong>coffee</strong>. I granted you access to our research, so that you can understand it by yourself. Go back to me when you think you got it.</p>
@@ -27,15 +27,15 @@
     </div>
   </app-pc-window>
 
-  <app-pc-window hidden id="w-rover" ifRight="w-intro"  rover="We've not even started and you're already lost? What a looser...">
+  <app-pc-window hidden id="w-bonzi" ifRight="w-intro"  bonzi="We've not even started and you're already lost? What a looser...">
     <p slot="title">More</p>
-    <p>I don't want to influence your thoughts, if you need help, call rover with the little [?] at the top of the toolbar.</p>
+    <p>I don't want to influence your thoughts, if you need help, call bonzi with the little [?] at the top of the toolbar.</p>
     <div class="window-buttons">
       <button rightAwnser>Go back</button>
     </div>
   </app-pc-window>
 
-  <app-pc-window hidden id="w-q1" ifRight="w-q2" ifWrong="w-e1" rover="What the hell is the Fratrum Capulus? I'm sure that u don't give a damn shit!">
+  <app-pc-window hidden id="w-q1" ifRight="w-q2" ifWrong="w-e1" bonzi="What the hell is the Fratrum Capulus? I'm sure that u don't give a damn shit!">
     <img slot="icon" src="<%= htmlWebpackPlugin.options.assetsUrl %>images/icons/pokeball.png">
     <p slot="title">Now go catch them all</p>
     <p>Can you guess who is the guru of the Fractum Capulus ?</p>
@@ -54,7 +54,7 @@
     </div>
   </app-pc-window>
 
-  <app-pc-window hidden id="w-q2" ifRight="w-q3" ifWrong="w-e1" rover="Please concentrate b**ch! I don't think that the little clown with two big ears is concerned.">
+  <app-pc-window hidden id="w-q2" ifRight="w-q3" ifWrong="w-e1" bonzi="Please concentrate b**ch! I don't think that the little clown with two big ears is concerned.">
     <p slot="title">Good job !</p>
     <p>And what chemical element is responsible of mind-possession ?</p>
     <div class="window-buttons">
@@ -65,7 +65,7 @@
     </div>
   </app-pc-window>
 
-  <app-pc-window hidden id="w-q3" ifRight="w-ending" rover="What the freak Dude! I think that god gave you craps instead of eyes.">
+  <app-pc-window hidden id="w-q3" ifRight="w-ending" bonzi="What the freak Dude! I think that god gave you craps instead of eyes.">
     <p slot="title">The final frontier</p>
     <p>Knowing what you know, find out who has been infected</p>
     <div class="window-buttons">
